--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -109,8 +109,33 @@
  FSM_military_buildup_desc:1 "The safety and security of our nation and people lie in the hands of our loyal military. By adding substantially to their numbers we shall secure our borders." 
  FSM_aggressive_strikes:1 "Bold Action"
  FSM_aggressive_strikes_desc:1 "Our generals are planning 'bold action.' By this we can only assume they mean to militarily correct some of the border irregularities that have always plagued our nation." 
+ FSM_liberalplaceholder1:1 "Stirrings of Industry"
+ FSM_liberalplaceholder1_desc:1 "Despite the social shock of the government passing the Landowners' Suffrage Amendment, our people have begun to warm to the idea. They have even begun to invest in factories, proving our government's prediction about the move right." 
+ FSM_liberalplaceholder3:1 "Minority Confidence"
+ FSM_liberalplaceholder3_desc:1 "Even now the Dutch speaking citizens who live primarily along our border with Fijnland have begun to invest in industry. How could we have ever doubted the wisdom of giving more people voting rights?" 
+ FSM_accept_german_scientists:1 "Accept German Scientists"
+ FSM_accept_german_scientists_desc:1 "Many brilliant minds from Germany are dismayed at the direction that Hitler has taken the country. We should offer them a safe, German home, with good schnitzel and even better beer." 
+ FSM_democratic_0:1 "Infrastructure Growth"
+ FSM_democratic_0_desc:1 "The Jaegerbergen divide the east from the west in FSM. We must ensure national unity by carving roads and railroads through the mountains to link our nation together." 
+ FSM_democratic_1:1 "Industrial Growth"
+ FSM_democratic_1_desc:1 "The newly enfranchised voters of FSM are now beginning to invest in industry. We must pave the way for them to not only vote, but to control and expand key industries." 
+ FSM_democratic_2:1 "Niemals Hitler!"
+ FSM_democratic_2_desc:1 "The rise of the Nazis in Germany, along with their radical ideas, have pushed many Germans into finally immigrating to FSM. Here, they feel that the government supports their ideals and beliefs."
+ 01_FSM_democratic2: "Immigrants swell the ranks of the military." 
+ FSM_democratic_3:1 "Rebirth of Military Industry"
+ FSM_democratic_3_desc:1 "We understand why our industry was destroyed during the Great War, but it still crippled our military for years. Now is the time to undo what was done and again build up our military; this time we fight on the side of Right."
+ FSM_democratic_4:1 "Immigrant Capital"
+ FSM_democratic_4_desc:1 "A few of the immigrants from Germany brought significant amounts of capital with them as they fled the Nazi regime. Most have begun investing in industries across the FSM."
+ FSM_democratic_5:1 "War is Hell"
+ FSM_democratic_5_desc:1 "The conflict in Europe, perpetrated by Nazi Germany, has brought another significant wave of immigration from the war-ravaged continent. We must welcome them with open arms, but remind them of their responsibilities to their new homeland."
+ 01_FSM_democratic5: "Another wave of immigrants join the ranks of the military." 
+ FSM_democratic_6:1 "End of the Sanctions"
+ FSM_democratic_6_desc:1 "After years of toil and diplomacy we have finally gained the chance to prove to the winners of the Great War that our contrition is true. If we publicly renounce all ideological ties to Germany, perhaps they will lift the sanctions imposed by the Treaty of Versailles."
+ FSM_pacific_doctrine:1 "Pacific Doctrine"
+ FSM_pacific_doctrine_desc:1 "After years of toil and diplomacy we have finally gained the chance to prove to the winners of the Great War that our contrition is true. If we publicly renounce all ideological ties to Germany, perhaps they will lift the sanctions imposed by the Treaty of Versailles."
 
-
+ FSM_pacific_doctrine:1 "Pacific Doctrine"
+ FSM_pacific_doctrine_desc:1 "Japan has had free reign in the Pacific for far too long. "
  FSM_nybornholm_question:0 "The Nybornholm Question"
  FSM_nybornholm_question_desc:0 "We have long had much in common with our Nybornholmer Danish brethren. In fact, we feel that we have more in common with them than they possibly could with Denmark! We eat the same foods, we drink the same liquors, and we sleep under the same stars. Even the Danish they speak is now mostly German! They should become one with us and our glory!"
 
