--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -132,10 +132,9 @@
  FSM_democratic_6:1 "End of the Sanctions"
  FSM_democratic_6_desc:1 "After years of toil and diplomacy we have finally gained the chance to prove to the winners of the Great War that our contrition is true. If we publicly renounce all ideological ties to Germany, perhaps they will lift the sanctions imposed by the Treaty of Versailles."
  FSM_pacific_doctrine:1 "Pacific Doctrine"
- FSM_pacific_doctrine_desc:1 "After years of toil and diplomacy we have finally gained the chance to prove to the winners of the Great War that our contrition is true. If we publicly renounce all ideological ties to Germany, perhaps they will lift the sanctions imposed by the Treaty of Versailles."
-
- FSM_pacific_doctrine:1 "Pacific Doctrine"
- FSM_pacific_doctrine_desc:1 "Japan has had free reign in the Pacific for far too long. "
+ FSM_pacific_doctrine_desc:1 "Japan has had free reign in the Pacific for far too long. We must aid the forces of democracy in suppressing the Japanese Hydra at sea. Our naval yards must grow to further strengthen the FSM's navy."
+ 
+ 
  FSM_nybornholm_question:0 "The Nybornholm Question"
  FSM_nybornholm_question_desc:0 "We have long had much in common with our Nybornholmer Danish brethren. In fact, we feel that we have more in common with them than they possibly could with Denmark! We eat the same foods, we drink the same liquors, and we sleep under the same stars. Even the Danish they speak is now mostly German! They should become one with us and our glory!"
 
