--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -33,8 +33,8 @@
  FSM_schoenesland_2_desc: "Though far removed from us geographically, Schoenesland is another bastion of German heritage. A century ago, we helped them secure their freedom. Today, we shall lead them to their glory again"
  FSM_vogelinsel_1:0 "Invite Vogelinsel"
  FSM_vogelinsel_1_desc:0 "A humble nation of South Mu, Vogelinsel had once voted to stay out of the Freistaaten. Nonetheless, they remain a close neighbour, and see plenty of influence from the FSM. Perhaps they would be willing to step up our cooperation?"
- FSM_vogelinsel_1:0 "Ultimatum to Vogelinsel"
- FSM_vogelinsel_1_desc:0 "The nation of Vogelinsel is meager and vulnerable. Their independence had given them relative peace, but as war draws near, their chances of surviving dwindle. Joining the Freistaaten is their only path to glory."
+ FSM_vogelinsel_2:0 "Ultimatum to Vogelinsel"
+ FSM_vogelinsel_2_desc:0 "The nation of Vogelinsel is meager and vulnerable. Their independence had given them relative peace, but as war draws near, their chances of surviving dwindle. Joining the Freistaaten is their only path to glory."
  FSM_challenge_austral_sea:0 "Austral Ocean Dominance"
  FSM_challenge_austral_sea_desc:0 "Many times in history nations have tried to claim bodies of water as their own. Most have not succeeded. But our dominance of the Austral Ocean is assured!"
  FSM_supress_manu_nationalism:1 "Oust Opposition in Manu"
@@ -65,6 +65,8 @@
  FSM_snap_elections_desc:1 "The support for the ZNSP has reached a critical high. The people's demands have been made clear. We should organize a snap election to hear the populace out; lest we risk a revolt."
  FSM_claims_on_tiquea:1 "Claims on Tiquea"
  FSM_claims_on_tiquea_desc:1 "Such barbarism! The Tiqueans don't know how to run their country, nor how to treat the natives that infest their lands. We must not only guide them, but force them, to act properly. "
+ FSM_just_another_research_slot:1 "Freiestaater Research"
+ FSM_just_another_research_slot_desc:1 "Our great universities produce some of the best research in the world but there are a lot of young, attractive distractions there. Now we have a perfect place to send researchers so that they do not get distracted - Antarctica! Our scientists can spend months at a time doing nothing but efficiently researching when there are no external distractions!"
  FSM_brotherhood:1 "Brotherhood"
  FSM_brotherhood_desc:1 "The brotherhood of the Mu-Deutsche peoples is undeniable. We come from the same blood and thus we obviously belong together!"
  FSM_sieze_fjinland:1 "Seize Fjinland"
@@ -133,6 +135,10 @@
  FSM_democratic_6_desc:1 "After years of toil and diplomacy we have finally gained the chance to prove to the winners of the Great War that our contrition is true. If we publicly renounce all ideological ties to Germany, perhaps they will lift the sanctions imposed by the Treaty of Versailles."
  FSM_pacific_doctrine:1 "Pacific Doctrine"
  FSM_pacific_doctrine_desc:1 "Japan has had free reign in the Pacific for far too long. We must aid the forces of democracy in suppressing the Japanese Hydra at sea. Our naval yards must grow to further strengthen the FSM's navy."
+ FSM_curb_fascism:1 "Curb Fascism"
+ FSM_curb_fascism_desc:1 "Hitler is a devious monster! He sent Nazi propagandists and agitators with the last wave of immigrants. We must work dilligently to root them out!"
+ FSM_military_start:1 "The FSM Armed Forces"
+ FSM_military_start_desc:1 "The Great War has shown us that we are militarily unprepared for another major conflict. Restructuring and reforming our military will provide us the chance to remedy this deficiency."
  
  
  FSM_nybornholm_question:0 "The Nybornholm Question"
