--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -139,6 +139,18 @@
  FSM_curb_fascism_desc:1 "Hitler is a devious monster! He sent Nazi propagandists and agitators with the last wave of immigrants. We must work dilligently to root them out!"
  FSM_military_start:1 "The FSM Armed Forces"
  FSM_military_start_desc:1 "The Great War has shown us that we are militarily unprepared for another major conflict. Restructuring and reforming our military will provide us the chance to remedy this deficiency."
+ FSM_airwings:1 "Airwings"
+ FSM_airwings_desc:1 "Organized aerial squadrons who train and drill together could provide significant advantages on the battlefield."
+ FSM_army_reform:1 "Army Reform"
+ FSM_army_reform_desc:1 "By instituting some structural changes in our army ranks we may be able to introduce more efficiency and allow the adoption of more advanced weapons and methods."
+ FSM_bushland_troops:1 "Buschlandtruppen"
+ FSM_bushland_troops_desc:1 "The interior of the FSM has proven to be a very tough training ground for our troops."
+ FSM_heavy_warships:1 "Heavy Hulls"
+ FSM_heavy_warships_desc:1 "Our military scientists would like permission to study the construction and hulls of foreign war vessels. They project a major improvement in our naval fighting capability if they are successful."
+ FSM_aircraft_carrier:1 "Flugzeugträger"
+ FSM_aircraft_carrier_desc:1 "While it is a relatively new technology for our navy, the admirals remain convinced that aircraft carriers will bring much needed air cover during naval sorties."
+ FSM_austral_dominance_doctrine:1 "Austral Dominance Doctrine"
+ FSM_austral_dominance_doctrine_desc:1 "The Austral Ocean is our ocean. Our navy is and must always be the most powerful navy on the Austral Ocean - no matter what enemies or even allies might say!"
  
  
  FSM_nybornholm_question:0 "The Nybornholm Question"
