--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -23,6 +23,10 @@
  FSM_veto_native_rights_bill_desc:1 "The law ensures that the people in charge of the economic policies are the ones making the money"
  FSM_pass_native_rights_bill:1 "Pass Landowners' Suffrage Amendment"
  FSM_pass_native_rights_bill_desc:1 "The constituiton of the FSM dictates that only landowners are allowed suffrage, confining the range of voters to the upper class. An amendment to relax these laws and allow more people to vote has a been up in the air in the government for a long time. Passing this would give common citizens more rights and would let newer ideas help develop the nation."
+ FSM_neutralplaceholder1:0 "Proven Values"
+ FSM_neutralplaceholder1_desc:0 "We must not deviate from the policies and governance that our people expect from us. To do so would be a betrayal of our national ideals and identity. We must bring our people together, not divide them in these perilous times."
+ FSM_neutralplaceholder2:0 "Force of Arms"
+ FSM_neutralplaceholder2_desc:0 "The military has proven in the past to be an effective tool of the government. We must strengthen and refine our military to provide the government the best tools."
  FSM_more_research:1 "Institutionalized Research"
  FSM_more_research_desc:1 "With our economy now safer, we can begin to give funds to our scientific endeavors"
  FSM_unite_germans:0 "Unite the Mu-Deutsche"
