--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -91,6 +91,8 @@
  FSM_antarctic_expedition_desc:1 "The southern continent has remained elusive. Cold conditions, relentless snowstorms, and lack of civilization means that no one has attempted to reach the south pole again since 1911. If we can claim the silver medal for this accomplishment with an even bolder expedition, we can be sure to receive admiration among the scientific community."
  FSM_centralize:1 "Centralize"
  FSM_centralize_desc:1 "As it stands now, our nation is divided; too many regulations differ between the states, and agreement is inconsistent. A strong nation needs a centralized government and an clear vision for the future. We must reform the government, and make sure everyone gets an equal treatment under the Freistaaten law, from every Ottostaater to Wüstenlander."
+ FSM_commonplaceholder2:1 "Preparing Alternate Naval Facilities"
+ FSM_commonplaceholder2_desc:1 "The Great War proved that placing all of our primary naval facilities in one location was folly. We must prepare another group of dockyards to continue producing hulls, should a war turn for the worst. And we must protect our capital against naval invasion as well!"
  FSM_american_union:1 "A More American Union"
  FSM_american_union_desc:1 "The union system of the FSM is vague and unclear. While at its core, the Staats are established as distinct administrative entities, they in practice rarely find the power to make their own laws. The USA is wildly successful, in part because they had given all of their states equal speak in the nations future, and plenty of self-determination. We must model our system on this to improve."
  FSM_recognize_dutch:1 "Recognize Dutch"
