--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -104,7 +104,7 @@
  FSM_claims_on_antarctica:1 "Claims On Antarctica"
  FSM_claims_on_antarctica_desc:1 "We have boldly gone where men weaker men have feared to go! The southern continent may be devoid of resources, but it is land nonetheless, to which we have a rightful claim! No reaches of the world are too dangerous for a Freistaater!"
  FSM_communist_hunt:1 "Hunt Down The Communists"
- FSM_communist_hunt_desc:1 "The claws of socialism have reached us too, and tug on our curtails like a demented monster. Deranged exiles from the homeland conspire with the rowdy and dangerous natives to bring the shadows of revolution to Mu. As long as they stand, we cannot rest easy. No home will go unchecked anymore."
+ FSM_communist_hunt_desc:1 "The claws of socialism have reached us too, and tug on our coatails like some demented monster. Deranged exiles from the homeland conspire with the rowdy and dangerous natives to bring the shadows of revolution to the FSM. As long as they stand, we cannot rest easy. No home will go unchecked anymore."
  FSM_maywerken:1 "Maywerken"
  FSM_maywerken_desc:1 "The experiences of Europe have taught us that transportation and communication are key factors in production. The Maywerken will be a major undertaking: a nationwide board of over 30 companies from different industries, subsidized by the government, with the purpose of simplifying deals, constructing new railways and roads, and regulating the production of goods all the way from raw material to the port."
  FSM_allied_research_bonus:1 "Joint Research"
