--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -42,7 +42,7 @@
  FSM_challenge_austral_sea:0 "Austral Ocean Dominance"
  FSM_challenge_austral_sea_desc:0 "Many times in history nations have tried to claim bodies of water as their own. Most have not succeeded. But our dominance of the Austral Ocean is assured!"
  FSM_supress_manu_nationalism:1 "Oust Opposition in Manu"
- FSM_supress_manu_nationalism_desc:1 "The 1920 treaty of Brunpfadstad, that ended the brief British protectorate in Southern Mu, agreed that Saxonia Austral be reorganized as the Manu Autonomous State and put under FSM administration. Manu was slated to be admitted as a full state of the FSM by 1935; unfortunately, many fascist sympathizers in their government have resisted progress in integration of the state. The only way we can move forward is by weeding out these obstructionists."
+ FSM_supress_manu_nationalism_desc:1 "The 1920 treaty of Brunpfadstad ended the brief British protectorate and reorganized Saxonia Austral as the Manu Autonomous State under FSM administration. Manu was to be admitted as a full state of the FSM by 1935; unfortunately, many fascist sympathizers in their government have resisted integration of the state. The only way we can move forward is by weeding out these obstructionists."
  FSM_rebuild_the_dockyards:1 "Rebuild the Dockyards"
  FSM_rebuild_the_dockyards_desc:1 "The heaviest toll in the Great War was taken by our southern ports. Housing a majority of our civilian and military dockyards, Blauswasser was a hub of trade and naval power for the growing FSM. Ruthless coastal bombardment and the occupation of the city by Entente forces left this industry in ruins. If we hope to revitalize the nation, it is best to start here."
  FSM_ripples_of_shanghai:1 "Ripples of Shanghai"
@@ -154,7 +154,7 @@
  FSM_heavy_warships:1 "Heavy Hulls"
  FSM_heavy_warships_desc:1 "Our military scientists would like permission to study the construction and hulls of foreign war vessels. They project a major improvement in our naval fighting capability if they are successful."
  FSM_aircraft_carrier:1 "Flugzeugträger"
- FSM_aircraft_carrier_desc:1 "While it is a relatively new technology for our navy, the admirals remain convinced that aircraft carriers will bring much needed air cover during naval sorties."
+ FSM_aircraft_carrier_desc:1 "While it is a relatively new technology for our navy the admirals remain convinced that aircraft carriers will bring much needed air cover during naval sorties."
  FSM_austral_dominance_doctrine:1 "Austral Dominance Doctrine"
  FSM_austral_dominance_doctrine_desc:1 "The Austral Ocean is our ocean. Our navy is and must always be the most powerful navy on the Austral Ocean - no matter what enemies or even allies might say!"
  
