--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -196,47 +196,53 @@
  fsm.8.a:0 "No German left behind!"
  fsm.8.b:0 "They are cowards and a liability."
  
- fsm.9.t:0 "FSM EVENT 9"
+ fsm.9.t:0 "FSM Seeks To Join The Allies"
  fsm.9.d:0 "Event Description"
- fsm.9.a:0 "Option A"
- fsm.9.b:0 "Option B"
+ fsm.9.a:0 "They are reliable."
+ fsm.9.b:0 "Issue a polite decline."
 
- fsm.10.t:0 "FSM EVENT 10"
- fsm.10.d:0 "Event Description"
- fsm.10.a:0 "Option A"
- fsm.10.b:0 "Option B"
+ fsm.10.t:0 "FSM Takes Over Government"
+ fsm.10.d:0 "The FSM has stepped in and taken over leadership of our nation"
+ fsm.10.a:0 "oh no. bad."
 
- fsm.11.t:0 "FSM EVENT 11"
- fsm.11.d:0 "Event Description"
- fsm.11.a:0 "Option A"
- fsm.11.b:0 "Option B"
+ fsm.11.t:0 "The Fate of Tiquea"
+ fsm.11.d:0 "Our military campaign in Tiquea has succeeded, and we now reap the rewards of war. Unfortunately, it is undeniable the Tiqueans won't be happy with becoming part of the FSM. Perhaps it would be wise to grant them some autonomy, to keep them from biting us."
+ fsm.11.a:0 "Establish a Reichkommissariat."
+ fsm.11.b:0 "We'll administer them however we damn please."
 
- fsm.12.t:0 "FSM EVENT 12"
- fsm.12.d:0 "Event Description"
- fsm.12.a:0 "Option A"
- fsm.12.b:0 "Option B"
+ fsm.12.t:0 "FSM Demands Subjugation."
+ fsm.12.d:0 "Here's to hoping that no one actually goes and plays Schoenesland because its 1 hour from release day and i have no clue what to write here. TL;DR you're getting annexed kiddo."
+ fsm.12.a:0 "A line must be drawn somewhere."
+ fsm.12.b:0 "We accept."
 
- fsm.13.t:0 "FSM EVENT 13"
- fsm.13.d:0 "Event Description"
- fsm.13.a:0 "Option A"
- fsm.13.b:0 "Option B"
+ fsm.13.t:0 "Uprising in Manu!"
+ fsm.13.d:0 "News are spreading like wildfire of the coup in the Manu Autonomous State. This morning, in an unauthorized move, members of the fascist militia have stormed the parliament, and proclaimed the nation's independence from the FSM. August Ritter's whereabouts are unknown, but it is likely he was captured by the revolutionaries. FSM representatives in the nation are putting up some resistance, but it seems the people of Manu are siding with the coup."
+ fsm.13.a:0 "We are nothing compared to the will of the people."
+ fsm.13.b:0 "Crush them!"
 
- fsm.14.t:0 "FSM EVENT 14"
- fsm.14.d:0 "Event Description"
- fsm.14.a:0 "Option A"
- fsm.14.b:0 "Option B"
+ fsm.14.t:0 "The Revolution"
+ fsm.14.d:0 "Our time has come. The streets ring with cheers, as Saxonia Austral proclaims independene oncemore. After years of planning, strategic diplomacy, and gaining trust from the people, the ZZSP has made its final move, and stormed the government. Taking hold of the parliament, as well as all military assets, they have declared a complete severing of ties with the FSM, and promised a more reliable, independent, and stronger fascist government."
+ fsm.14.a:0 "The Yellow Flag hangs proudly again!"
  
  fsm.15.t:0 "FSM Requests New Guinea"
  fsm.15.d:0 "An ambassador from the FSM arrived today with a demand from those Mu Germans. They want us to cede control of Papua and New Guinea to them, citing their previous colonial status under the German Empire. While this might seem unpleasant to contemplate, it would be better to give it to them than to the Nazis, right?"
  fsm.15.a:0 "They are right. We shall cede it immediately."
  fsm.15.b:0 "What cheeky little... No!"
 
+ fsm.16.t:0 "FSM EVENT 14"
+ fsm.16.d:0 "Responding to our request to hand over the Colony of New Guinea, the Australian government has issued a stern rejection of our demands. The long statement presents a case against the validity of our claims and ability to even administer the far away island, but boils down to a simple answer: No."
+ fsm.16.a:0 "You know, I never really thought this far ahead."
+
+ fsm.17.t:0 "Australia Hands Over New Guinea."
+ fsm.17.d:0 "Our recent diplomatic pressure on Australia has finally cracked them. The Colony of New Guinea is to be officially transferred to the FSM, as a client state. A german-led administration is already being put together to serve as a new government on the island, and our high command has been busy drafting war plans and funneling resources into this new Colony, hoping to establish it as a major port and jumping off point for our Navy."
+ fsm.17.a:0 "Another German land back in rightful hands!"
+
  fsm.20.t:0 "FSM EVENT 20"
- fsm.20.d:0 "Event Description"
+ fsm.20.d:0 "Event De scription"
  fsm.20.a:0 "Option A"
  fsm.20.b:0 "Option B"
 
- fsm.24.t:0 "FSM EVENT 24"
- fsm.24.d:0 "Event Description"
- fsm.24.a:0 "Option A"
- fsm.24.b:0 "Option B"
+ fsm.24.t:0 "FSM Proposes Alliance"
+ fsm.24.d:0 "Word has reached us the the Freistaaten are once again attempting to establish hegemony over their slice of Mu. They've been steadily improving their military, and are pushing for solidarity between the German nations of Mu. They have reached out to us, and propose that we join them in forces."
+ fsm.24.a:0 "Gladly!"
+ fsm.24.b:0 "We would rather not..."
