--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -159,6 +159,17 @@
  FSM_austral_dominance_doctrine_desc:1 "The Austral Ocean is our ocean. Our navy is and must always be the most powerful navy on the Austral Ocean - no matter what enemies or even allies might say!"
  
  
+ FSM_germans_are_super_bros1:0 "German Brotherhood"
+ FSM_aggressive_strikes1:0 "Aggressive Moves"
+ FSM_colonial_companies_subsidies:0 "Colonial Company Subsidies"
+ FSM_plantations_nationalized:0 "Plantations Nationalized"
+ FSM_dutch_immigration:0 "Dutch Immigration"
+ FSM_centralization:0 "Centralization of Power"
+ FSM_federalism:0 "American-Style Federalism"
+ FSM_denazification:0 "Denazification Efforts"
+ FSM_austral_dominance:0 "Austral Dominance Doctrine"
+ 
+ 
  FSM_nybornholm_question:0 "The Nybornholm Question"
  FSM_nybornholm_question_desc:0 "We have long had much in common with our Nybornholmer Danish brethren. In fact, we feel that we have more in common with them than they possibly could with Denmark! We eat the same foods, we drink the same liquors, and we sleep under the same stars. Even the Danish they speak is now mostly German! They should become one with us and our glory!"
 
