--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -98,6 +98,7 @@
  FSM_recognize_dutch:1 "Recognize Dutch"
  FSM_recognize_dutch_desc:1 "While the FSM has always been German at its core, it’s important we don’t forget our roots under the crown of the Netherlands. Many Freistaater have Dutch roots, and still speak the language at home. We should fully embrace our identity and recognize Dutch as a second official language."
  FSM_admit_gdea:1 "Admit The GdEA Into Parliament"
+ 1_FSM_tt:0 "GdEA becomes an official government party"
  FSM_admit_gdea_desc:1 "The Gesellschaft der Einheimischen Arbeiter has in recent years risen to prominance as a major political player. Pushing for native rights and a more socialist system, they have been a nuisance, but made strides in accomplishing their goal. Perhaps it’s time to face the music, and let the Native communists pursue their mission as an official political party."
  FSM_negotiate_sanctions:1 "Negotiate The Sanctions"
  FSM_negotiate_sanctions_desc:1 "Nearly 20 years have passed since the end of the Great War, and the FSM has been a model nation. Despite the hard hit we took, we have continued to grow, and we have been on good terms with the British and French. We are in a good position to request renegotiation of the steep sanctions placed on us."
@@ -240,7 +241,7 @@
  fsm.15.a:0 "They are right. We shall cede it immediately."
  fsm.15.b:0 "What cheeky little... No!"
 
- fsm.16.t:0 "FSM EVENT 14"
+ fsm.16.t:0 "The Australian Government Rejects Our Proposal"
  fsm.16.d:0 "Responding to our request to hand over the Colony of New Guinea, the Australian government has issued a stern rejection of our demands. The long statement presents a case against the validity of our claims and ability to even administer the far away island, but boils down to a simple answer: No."
  fsm.16.a:0 "You know, I never really thought this far ahead."
 
