--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -249,11 +249,11 @@
  fsm.17.d:0 "Our recent diplomatic pressure on Australia has finally cracked them. The Colony of New Guinea is to be officially transferred to the FSM, as a client state. A german-led administration is already being put together to serve as a new government on the island, and our high command has been busy drafting war plans and funneling resources into this new Colony, hoping to establish it as a major port and jumping off point for our Navy."
  fsm.17.a:0 "Another German land back in rightful hands!"
 
- fsm.20.t:0 "FSM EVENT 20"
- fsm.20.d:0 "Event De scription"
- fsm.20.a:0 "Option A"
- fsm.20.b:0 "Option B"
-
+ fsm.20.t:0 "FSM proposes anschluss"
+ fsm.20.d:0 "The ever expanding FSM doctrine has reached us too. They now stand at our doors, with an ultimatum; hand over the country!"
+ fsm.20.a:0 "Never."
+ fsm.20.b:0 "We're better with them!"
+ fsm.20.c:0 "We'll lay down our lives for them!"
  fsm.24.t:0 "FSM Proposes Alliance"
  fsm.24.d:0 "Word has reached us the the Freistaaten are once again attempting to establish hegemony over their slice of Mu. They've been steadily improving their military, and are pushing for solidarity between the German nations of Mu. They have reached out to us, and propose that we join them in forces."
  fsm.24.a:0 "Gladly!"
