localisation, #ing out more Kaiser branch stuff

--- a/localisation/TOD_focus_l_english.yml
+++ b/localisation/TOD_focus_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+ TOD_center_of_the_world: "Center of the World"
  TOD_fed_tod_soc_states:1 "Federated Todorovian Socialist States"
  TOD_start:1 "Organize the Government"
  TOD_start_desc:1 "Before we make any moves on the world stage we must ensure that we have prepared our government for the challenges ahead."
