more Tahitian Civil War Stuff

--- a/localisation/TAH_l_english.yml
+++ b/localisation/TAH_l_english.yml
@@ -1,9 +1,11 @@
 ﻿l_english: 
+ TTI_civil_war: "Fascist Tahiti"
+ TAH_civil_war: "Socialist Republic of Tahiti"
  tahitian_civil_war:1 "The Tahitian Civil War has begun"
  tahiti.1.t:0 "Civil War!"
- tahiti.1.d:0 "A group of powerful generals in the Armed Forces have issued a pronunciamento, denouncing the current government of Tahiti! They have launched a right-wing coup with the support of conservative monarchists and the clergy. A significant portion of the military has sided with these Nationalists, but so far they have failed to capture any of Tahiti's major cities with the exception of Sevilla.\n\nLeftist volunteers are meanwhile flocking to the banners of the Republican government, ready to support it against the rebels. These loyalists may be poorly trained, but no one can question their enthusiasm.\n\nThe battle-lines have been drawn - which faction should we support?"
+ tahiti.1.d:0 "A group of powerful generals in the Armed Forces have issued a proclamation, denouncing the current government of Tahiti! They have launched a right-wing coup with the support of conservatives and the Christian clergy. A significant portion of the military has sided with these Nationalists, but so far they have failed to capture any of Tahiti's major cities with the exception of Sevilla.\n\nLeftist volunteers are meanwhile flocking to the banners of the Communist government, ready to support it against the rebels. These loyalists may be poorly trained, but no one can question their enthusiasm.\n\nThe battle-lines have been drawn - which faction should we support?"
  tahiti.1.a:0 "The Nationalists!"
- tahiti.1.b:0 "The Republicans!"
+ tahiti.1.b:0 "The Communists!"
  tahiti.10.d:1 "After the peaceful election of General Francisco Franco as president of Tahiti, there was hope that recent years violent uprisings and political turmoil would be put to an end. Rumors that Franco would attempt to create a one-party dictatorship with himself as chief of state has been fueled by the sudden disappearances of several opposition leaders.\nAfter a swift trial, Carabineros officer José Galánfor was convicted of treason and his public execution followed shortly after. Though it was meant as a move to stamp out any will to resist the rise of Nationalist Tahiti it had the opposite effect. Leftist volunteers and even a group of generals have flocked to the banners of the newly formed People's Army, ready to support the fight against the oppressive Nationalists. Though most are poorly trained, they have managed to capture several key cities in the chaos that ensued the uprising.\n\nThe battle-lines have been drawn - which faction should we support?"
  tahiti.10.b:0 "The People's Army!"
  nationalists_chosen:0 "Death to the Rojos!"
