updated geq tree, and added it back
the geq tree should be finished by the next patch, all i have to do is add one part to the democratic path, add the industrial and military paths and then localize it(which is quick)

--- a/localisation/GEQ_l_english.yml
+++ b/localisation/GEQ_l_english.yml
@@ -31,3 +31,33 @@
  GEQ_geq_bonus_desc:0 "The Duqegmu people live in an enviorment with many different terrains, this has allowed them to endure in the toughest of situations."
  GEQ_jap_bonus:0 "Japanese Naval Aid"
  GEQ_jap_bonus_desc:0 "We have gotten Japanese naval production, and development aid."
+ GEQ_democratic_popularity_spreading:0 "Support Equality"
+ GEQ_democratic_popularity_spreading_desc:0 ""
+ GEQ_secure_democracy:0 "Stabilize the New State"
+ GEQ_secure_democracy_desc:0 "We will stabilize the newly formed democratic Geq."
+ GEQ_bring_in_capitalism:0 "Bring in Capitalism"
+ GEQ_bring_in_capitalism_desc:0 "We are incorporating capitalist ways into our economy."
+ GEQ_MDA:0 "Muror Defence Alliance"
+ GEQ_the_defence_of_mu:0 "The Defence of Mu"
+ GEQ_the_defence_of_mu_desc:0 "We will cooperate closely with fellow Muror countries to prepare the inevitable defence of our countries."
+ geq.20.t:0 "Geq asks for a Referendum"
+ geq.20.d:0 "Geq asks us to have a referendum to unite with them, as they wish to expand their democracy, but really they just want a coastline."
+ geq.20.a:0 "No"
+ geq.20.b:0 "Yes"
+ geq.21.t:0 "New Cambria Declines"
+ geq.21.d:0 "They have declined an offer for a referendum."
+ geq.21.a:0 "Okay"
+ geq.22.t:0 "Geq asks for a Referendum"
+ geq.22.d:0 "Geq asks us to have a referendum to unite with them, as they wish to expand their democracy, but really they just want a coastline."
+ geq.22.a:0 "No"
+ geq.22.b:0 "Yes"
+ geq.23.t:0 "New Hibernia Declines"
+ geq.23.d:0 "They have declined an offer for a referendum."
+ geq.23.a:0 "Okay"
+ geq.24.t:0 "Geq asks for a Referendum"
+ geq.24.d:0 "Geq asks us to have a referendum to unite with them, as they wish to expand their democracy, but really they just want a coastline."
+ geq.24.a:0 "No"
+ geq.24.b:0 "Yes"
+ geq.25.t:0 "New Livonia Declines"
+ geq.25.d:0 "They have declined an offer for a referendum."
+ geq.25.a:0 "Okay"
