Island Names Fixed

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -239,18 +239,18 @@
  MNU_democratic_ADJ:0 "Manu"
  MNU_neutrality_ADJ:0 "Manu"
  MNU_communism_ADJ:0 "Manu"
- ARA_fascism:0 "Aragoilla"
- ARA_fascism_DEF:0 "Aragoilla"
- ARA_democratic:0 "Aragoilla"
- ARA_democratic_DEF:0 "Aragoilla"
- ARA_neutrality:0 "Aragoilla"
- ARA_neutrality_DEF:0 "Aragoilla"
- ARA_communism:0 "Socialist Republic of Aragoilla"
- ARA_communism_DEF:0 "The Socialist Republic of Aragoilla"
- ARA_fascism_ADJ:0 "Aragoillan"
- ARA_democratic_ADJ:0 "Aragoillan"
- ARA_neutrality_ADJ:0 "Aragoillan"
- ARA_communism_ADJ:0 "Aragoillan"
+ ARA_fascism:0 "Prometida"
+ ARA_fascism_DEF:0 "Prometida"
+ ARA_democratic:0 "Prometida"
+ ARA_democratic_DEF:0 "Prometida"
+ ARA_neutrality:0 "Prometida"
+ ARA_neutrality_DEF:0 "Prometida"
+ ARA_communism:0 "Socialist Republic of Prometida"
+ ARA_communism_DEF:0 "The Socialist Republic of Prometida"
+ ARA_fascism_ADJ:0 "Prometidan"
+ ARA_democratic_ADJ:0 "Prometidan"
+ ARA_neutrality_ADJ:0 "Prometidan"
+ ARA_communism_ADJ:0 "Prometidan"
  NHI_fascism:0 "Hibernia Invicta"
  NHI_fascism_DEF:0 "Hibernia Invicta"
  NHI_democratic:0 "New Hibernia"
@@ -287,18 +287,18 @@
  NCA_democratic_ADJ:0 "Neocambrian"
  NCA_neutrality_ADJ:0 "Neocambrian"
  NCA_communism_ADJ:0 "New Cambrian"
- CTT_fascism:0 "Catalunilla"
- CTT_fascism_DEF:0 "Catalunilla"
- CTT_democratic:0 "Catalunilla"
- CTT_democratic_DEF:0 "Catalunilla"
- CTT_neutrality:0 "Catalunilla"
- CTT_neutrality_DEF:0 "Catalunilla"
- CTT_communism:0 "Socialist Republic of Catalunilla"
- CTT_communism_DEF:0 "The Socialist Republic of Catalunilla"
- CTT_fascism_ADJ:0 "Catalunillan"
- CTT_democratic_ADJ:0 "Catalunillan"
- CTT_neutrality_ADJ:0 "Catalunillan"
- CTT_communism_ADJ:0 "Catalunillan"
+ CTT_fascism:0 "Islárida"
+ CTT_fascism_DEF:0 "Islárida"
+ CTT_democratic:0 "Islárida"
+ CTT_democratic_DEF:0 "Islárida"
+ CTT_neutrality:0 "Islárida"
+ CTT_neutrality_DEF:0 "Islárida"
+ CTT_communism:0 "Socialist Republic of Islárida"
+ CTT_communism_DEF:0 "The Socialist Republic of Islárida"
+ CTT_fascism_ADJ:0 "Isláridan"
+ CTT_democratic_ADJ:0 "Isláridan"
+ CTT_neutrality_ADJ:0 "Isláridan"
+ CTT_communism_ADJ:0 "Isláridan"
  NYB_fascism:0 "Nybornholm"
  NYB_fascism_DEF:0 "Nybornholm"
  NYB_democratic:0 "Nybornholm"
