Tahitian Civil War Junk

--- a/localisation/TAH_l_english.yml
+++ b/localisation/TAH_l_english.yml
@@ -40,3 +40,14 @@
  tahiti.9.d:0 "The Republic has proven to be a fragile existence. Manuel Azaña can be president with the backing of the Popular Front, a broad coalition of left-wing groups supported by republicans, communists and anarchists.\n\nBut the right-wing opposition, encompassing conservatives, monarchists and fascists, is also beginning to unite for the cause of bringing down the Popular Front. Whichever coalition falls apart, their opponents are likely to take advantage of their internal conflicts to launch a revolution. This election is not the final test Tahiti will have to endure to resolve this conflict."
  tahiti.9.a:0 "Maintain the Popular Front."
  tahiti.9.b:0 "Unite the conservative groups under Falange."
+ 
+ tah.news.63.t:0 "The Spanish Civil War"
+ tah.news.63.d:0 "A civil war has erupted in Spain! Several generals seeking to overthrow the current government in Madrid have issued a pronunciamento, and a large portion of the Spanish Armed Forces have answered their call to arms. \n\nThis right-wing Nationalist faction has occupied much of Spain, including the overseas territories.\nLoyalist forces and volunteers have assembled under the left-wing Republican government, determined to resist the putsch to their last breath. \n\nThe battle for Spain has begun."
+ tah.news.63.a:0 "What will this mean for Spain?"
+ tah.news.63.b:0 "To victory!"
+ tah.news.64.t:0 "The End of the Spanish Civil War"
+ tah.news.64.d:0 "With the surrender of the last Republican strongholds, the Spanish Civil War has come to an end. \n\nThe Nationalists stand victorious, and a new era has begun for Spain. \n\nThe war-torn country has suffered greatly in the fighting, and there is much rebuilding to be done."
+ tah.news.64.a:1 "An interesting development."
+ tah.news.64.b:0 "Now to heal our nation."
+ tah.news.65.a:0 "Good for Spain."
+ tah.news.65.d:0 "With the surrender of the last Nationalist forces, the Spanish Civil War has come to an end. \n\nThe Republicans have emerged victorious, and a new era has begun for Spain. \n\nThe war-torn country has suffered greatly in the fighting, and there is much rebuilding to be done."
