Ship related stuff

--- a/localisation/AML_tech_english.yml
+++ b/localisation/AML_tech_english.yml
@@ -285,3 +285,6 @@
  FSM_rocket_interceptor_equipment_3_short:0 "Fw VJ"
  FSM_rocket_interceptor_equipment_3_short:0 "Fw VJ"
  FSM_rocket_interceptor_equipment_3_short:0 "Fw VJ"
+ 
+ 
+ ship_hull_cruiser_FSM_panzerschiff:0 "FSM Panzerschiff"
