--- a/localisation/AML_tech_l_english.yml
+++ b/localisation/AML_tech_l_english.yml
@@ -1,22 +1,20 @@
 ﻿l_english:
-#----------------------#
-    ####  ###  #   #
-    #    #     ## ##
-    ###   ##   # # #
-    #       #  #   #
-    #    ###   #   #
-#----------------------#
-###infantry equipment
  FSM_infantry_equipment_0:0 "Gewehr 98"
  FSM_infantry_equipment_0_short:0 "Gewehr 98"
- FSM_infantry_equipment_1:0 "Karabiner 98k"
- FSM_infantry_equipment_1_short:0 "Karabiner 98k"
- FSM_infantry_equipment_2:0 "MP 38"
- FSM_infantry_equipment_2_short:0 "MP 38"
- FSM_infantry_equipment_3:0 "MP 43"
- FSM_infantry_equipment_3_short:0 "MP 43"
- FSM_infantry_at:0 "Panzerfaust 30"
- FSM_infantry_at2:0 "Panzerschreck"
+ FSM_infantry_equipment_0_desc:0 "The Gewehr 98 was a German rifle that saw extensive use during the Great War. It was also produced in the Freiestatten von Mu under license."
+ FSM_infantry_equipment_1:0 "Gewehr 33"
+ FSM_infantry_equipment_1_short:0 "Gewehr 33"
+ FSM_infantry_equipment_1_desc:0 "The Gewehr 33 was a semi-automatic rifle that supplanted the aging Gewehr 98. The first indigenous rifle design, it was blowback-operated and utilized the same 7.92×57mm Mauser cartridge as its predecessor."
+ FSM_infantry_equipment_2:0 "<name>"
+ FSM_infantry_equipment_2_short:0 ""
+ FSM_infantry_equipment_2_desc:0 "Facing the modern mobile war, the inadequacies of the old long range rifles forced the Freiestatter Armed Forces to evaluate a new design for close quarter combat. The <name> was a cheap gas-operated light submachinegun made of stamped steel sheets that fires 8.5×19mm pistol rounds."
+ FSM_infantry_equipment_3:0 "<name>"
+ FSM_infantry_equipment_3_short:0 ""
+ FSM_infantry_equipment_3_desc:0 "The <name> was a conversion of the <name> submachinegun for a shortened rifle cartridge. The gas piston was moved below the barrel and the weapon was lenghtened to form a versatile selective fire rifle that was efficient at ranges of up to 300m, but much lighter than a traditional rifle."
+ FSM_infantry_at:0 "<jumping grenade>"
+ FSM_infantry_at_desc:0 "The <jumping grenade> was an anti tank grenade that sported a diminute propelling charge in its base. The soldier would arm the weapon by removing its safety pin, buttress its base at some hard surface, point the grenade to the enemy armor and pull the trigger, firing the grenade. The weapon had poor accuracy and range, but these disadvantages were compensated with low cost and portability"
+ FSM_infantry_at2:0 "<name>"
+ FSM_infantry_at2_desc:0 "A refinement of the older jumping grenade concept, the <name> was also a launched shaped charge, but now from an open tube and used a recoilless ammunition that needed no support to accelerate. Its effectiveness was somehow hindered by the heavy weight of its tube, needed to withstand the high pressure of the propelling charge."
  
  
  FSM_artillery_equipment_1:0 "10.5 cm Leichte Feldhaubitze 18"
@@ -25,17 +23,14 @@
  FSM_artillery_equipment_3:0 "15 cm Kanone 18"
  
  FSM_anti_air_equipment_1:0 "2 cm FlaK 30"
- FSM_anti_air_equipment_1_short:0 "2 cm FlaK 30"
  FSM_anti_air_equipment_2:0 "2 cm Flakvierling 38"
  FSM_anti_air_equipment_3:0 "8.8 cm Flak 41"
  
  FSM_anti_tank_equipment_1:0 "3,7 cm PaK 36"
- FSM_anti_tank_equipment_1_short:0 "3,7 cm PaK 36"
  FSM_anti_tank_equipment_2:0 "7,5 cm PaK 40"
  FSM_anti_tank_equipment_3:0 "12,8 cm PaK 44"
  
  FSM_rocket_artillery_equipment_1:0 "28/32 cm Nebelwerfer 41"
- FSM_rocket_artillery_equipment_1_short:0 "Nebelwerfer 41"
  FSM_rocket_artillery_equipment_2:0 "21 cm Nebelwerfer 42"
  
  
@@ -285,6 +280,3 @@
  FSM_rocket_interceptor_equipment_3_short:0 "Fw VJ"
  FSM_rocket_interceptor_equipment_3_short:0 "Fw VJ"
  FSM_rocket_interceptor_equipment_3_short:0 "Fw VJ"
- 
- 
- ship_hull_cruiser_FSM_panzerschiff:0 "FSM Panzerschiff"
