--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -11,6 +11,18 @@
  GER_democratic_ADJ:0 "German"
  GER_neutrality_ADJ:0 "German"
  GER_communism_ADJ:0 "German"
+ ATL_fascism:0 "Atlantis"
+ ATL_fascism_DEF:0 "Atlantis"
+ ATL_democratic:0 "Atlantis"
+ ATL_democratic_DEF:0 "Atlantis"
+ ATL_neutrality:0 "Atlantis"
+ ATL_neutrality_DEF:0 "Atlantis"
+ ATL_communism:0 "Atlantis"
+ ATL_communism_DEF:0 "Atlantis"
+ ATL_fascism_ADJ:0 "Atlantean"
+ ATL_democratic_ADJ:0 "Atlantean"
+ ATL_neutrality_ADJ:0 "Atlantean"
+ ATL_communism_ADJ:0 "Atlantean"
  WTS_fascism:0 "Wrightsylvania"
  WTS_fascism_DEF:0 "Wrightsylvania"
  WTS_democratic:0 "Wrightsylvania"
