States Rearranged in North America

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -386,7 +386,7 @@
  STATE_385:0 "Oregon"
  STATE_386:0 "Washington"
  STATE_387:0 "Idaho"
- STATE_388:0 "Montana"
+ STATE_388:0 "Shoshone"
  STATE_389:0 "North Dakota"
  STATE_390:0 "South Dakota"
  STATE_391:0 "Minnesota"
@@ -469,9 +469,9 @@
  STATE_468:0 "Saint Lawrence"
  STATE_469:0 "Saskatchewan"
  STATE_470:0 "Alberta"
- STATE_471:0 "Northwestern Canada"
- STATE_472:0 "Northern Canada"
- STATE_473:0 "British Columbia"
+ STATE_471:0 "Yukon"
+ STATE_472:0 "Northern Territories"
+ STATE_473:0 "Kootenay"
  STATE_474:0 "Yucatan"
  STATE_475:0 "Chiapas"
  STATE_476:0 "Oaxaca"
@@ -681,7 +681,7 @@
  STATE_680:0 "Deir-az-Zur"
  STATE_681:0 "Cape"
  STATE_682:0 "Northern Ontario"
- STATE_683:0 "Northeastern Canada"
+ STATE_683:0 "Keewatin"
  STATE_684:0 "Caroline Islands"
  STATE_685:1 "Panamá Canal"
  STATE_686:0 "Puerto Rico"
@@ -937,3 +937,27 @@
  STATE_936:0 "Nordwüstenland"
  STATE_937:0 "Nybornholm"
  STATE_938:0 "Nuyu"
+ STATE_939:0 "South Tesi"
+ STATE_940:0 "Antillia"
+ STATE_941:0 "Thule"
+ STATE_942:0 "Brasil Island"
+ STATE_943:0 "Frisland"
+ STATE_944:0 "Atlantis SW"
+ STATE_945:0 "Atlantis N"
+ STATE_946:0 "Atlantis E"
+ STATE_947:0 "Atlantis W"
+ STATE_948:0 "Atlantis SE"
+ STATE_949:0 "Sumendia"
+ STATE_950:0 "Jefferson"
+ STATE_951:0 "Lincoln"
+ STATE_952:0 "New Caledonia"
+ STATE_953:0 "British Columbia"
+ STATE_954:0 "Valhalla Island"
+ STATE_955:0 "Athabasca"
+ 
+ 
+ 
+ 
+ 
+ 
+ 
