--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -952,7 +952,7 @@
  STATE_951:0 "Lincoln"
  STATE_952:0 "New Caledonia"
  STATE_953:0 "British Columbia"
- STATE_954:0 "Valhalla Island"
+ STATE_954:0 "Valhalla"
  STATE_955:0 "Athabasca"
  
  
