--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -470,7 +470,7 @@
  STATE_469:0 "Saskatchewan"
  STATE_470:0 "Alberta"
  STATE_471:0 "Yukon"
- STATE_472:0 "Northern Territories"
+ STATE_472:0 "Arctic Territories"
  STATE_473:0 "Kootenay"
  STATE_474:0 "Yucatan"
  STATE_475:0 "Chiapas"
@@ -942,18 +942,18 @@
  STATE_941:0 "Thule"
  STATE_942:0 "Brasil Island"
  STATE_943:0 "Frisland"
- STATE_944:0 "Atlantis SW"
- STATE_945:0 "Atlantis N"
- STATE_946:0 "Atlantis E"
- STATE_947:0 "Atlantis W"
- STATE_948:0 "Atlantis SE"
+ STATE_944:0 "Akitselo"
+ STATE_945:0 "Mutsarna"
+ STATE_946:0 "Hemaritsal"
+ STATE_947:0 "Setitla"
+ STATE_948:0 "Ladskamn"
  STATE_949:0 "Sumendia"
  STATE_950:0 "Jefferson"
  STATE_951:0 "Lincoln"
  STATE_952:0 "New Caledonia"
  STATE_953:0 "British Columbia"
  STATE_954:0 "Valhalla"
- STATE_955:0 "Athabasca"
+ STATE_955:0 "Athabaska"
  
  
  
