country changes, etc

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -11,18 +11,78 @@
  GER_democratic_ADJ:0 "German"
  GER_neutrality_ADJ:0 "German"
  GER_communism_ADJ:0 "German"
+ CAL_fascism:0 "Greater California"
+ CAL_fascism_DEF:0 "Greater California"
+ CAL_democratic:0 "California Republic"
+ CAL_democratic_DEF:0 "The California Republic"
+ CAL_neutrality:0 "California"
+ CAL_neutrality_DEF:0 "California"
+ CAL_communism:0 "People's Republic of California"
+ CAL_communism_DEF:0 "The People's Republic of California"
+ CAL_fascism_ADJ:0 "Californian"
+ CAL_democratic_ADJ:0 "Californian"
+ CAL_neutrality_ADJ:0 "Californian"
+ CAL_communism_ADJ:0 "Californian"
+ CAS_fascism:0 "Cadcadia"
+ CAS_fascism_DEF:0 "The Cascadian Empire"
+ CAS_democratic:0 "Cascadia"
+ CAS_democratic_DEF:0 "The Republic of Cascadia"
+ CAS_neutrality:0 "Pacific Republic"
+ CAS_neutrality_DEF:0 "The Republic of the Pacific"
+ CAS_communism:0 "Cascadian Socialist Republic"
+ CAS_communism_DEF:0 "The Cascadian Socialist Republic"
+ CAS_fascism_ADJ:0 "Cascadian"
+ CAS_democratic_ADJ:0 "Cascadian"
+ CAS_neutrality_ADJ:0 "Cascadian"
+ CAS_communism_ADJ:0 "Cascadian"
+ FRI_fascism:0 "Frisland"
+ FRI_fascism_DEF:0 "The Frisland Riki"
+ FRI_democratic:0 "Frisland"
+ FRI_democratic_DEF:0 "Frisland"
+ FRI_neutrality:0 "Frisland"
+ FRI_neutrality_DEF:0 "Frisland"
+ FRI_communism:0 "Socialist Republic of Frisland"
+ FRI_communism_DEF:0 "The Socialist Republic of Frisland"
+ FRI_fascism_ADJ:0 "Frislandic"
+ FRI_democratic_ADJ:0 "Frislandic"
+ FRI_neutrality_ADJ:0 "Frislandic"
+ FRI_communism_ADJ:0 "Frislandic"
  ATL_fascism:0 "Atlantis"
- ATL_fascism_DEF:0 "Atlantis"
+ ATL_fascism_DEF:0 "The Empire of Atlantis"
  ATL_democratic:0 "Atlantis"
  ATL_democratic_DEF:0 "Atlantis"
  ATL_neutrality:0 "Atlantis"
  ATL_neutrality_DEF:0 "Atlantis"
- ATL_communism:0 "Atlantis"
- ATL_communism_DEF:0 "Atlantis"
+ ATL_communism:0 "Socialist Republic of Atlantis"
+ ATL_communism_DEF:0 "The Socialist Republic of Atlantis"
  ATL_fascism_ADJ:0 "Atlantean"
  ATL_democratic_ADJ:0 "Atlantean"
  ATL_neutrality_ADJ:0 "Atlantean"
  ATL_communism_ADJ:0 "Atlantean"
+ THU_fascism:0 "Thule"
+ THU_fascism_DEF:0 "Thule"
+ THU_democratic:0 "Thule"
+ THU_democratic_DEF:0 "Thule"
+ THU_neutrality:0 "Thule"
+ THU_neutrality_DEF:0 "Thule"
+ THU_communism:0 "Socialist Republic of Thule"
+ THU_communism_DEF:0 "The Socialist Republic of Thule"
+ THU_fascism_ADJ:0 "Thulander"
+ THU_democratic_ADJ:0 "Thulander"
+ THU_neutrality_ADJ:0 "Thulander"
+ THU_communism_ADJ:0 "Thulander"
+ ANT_fascism:0 "Antillia"
+ ANT_fascism_DEF:0 "Antillia"
+ ANT_democratic:0 "Antillia"
+ ANT_democratic_DEF:0 "Antillia"
+ ANT_neutrality:0 "Antillia"
+ ANT_neutrality_DEF:0 "Antillia"
+ ANT_communism:0 "Socialist Republic of Antillia"
+ ANT_communism_DEF:0 "The Socialist Republic of Antillia"
+ ANT_fascism_ADJ:0 "Antillian"
+ ANT_democratic_ADJ:0 "Antillian"
+ ANT_neutrality_ADJ:0 "Antillian"
+ ANT_communism_ADJ:0 "Antillian"
  WTS_fascism:0 "Wrightsylvania"
  WTS_fascism_DEF:0 "Wrightsylvania"
  WTS_democratic:0 "Wrightsylvania"
