--- a/localisation/strategic_region_names_l_english.yml
+++ b/localisation/strategic_region_names_l_english.yml
@@ -242,4 +242,4 @@
  STRATEGICREGION_242:0 "Californian Sea"
  STRATEGICREGION_243:0 "California Island"
  STRATEGICREGION_244:0 "Cascadia"
- 
+ STRATEGICREGION_245:0 "Atlantis"
