--- a/localisation/GEQ_l_english.yml
+++ b/localisation/GEQ_l_english.yml
@@ -61,3 +61,163 @@
  geq.25.t:0 "New Livonia Declines"
  geq.25.d:0 "They have declined an offer for a referendum."
  geq.25.a:0 "Okay"
+ geq.26.t:0 "Geq Requests Industrial Investments"
+ geq.26.d:0 "Geq is asking us to invest businesses, and indsutry in their nation. Doing this may incline Geq to give us bonuses in the future."
+ geq.26.a:0 "Yes"
+ geq.26.b:0 "No"
+ geq.27.t:0 "America invests in Geq!"
+ geq.27.d:0 "They have invested in our country, we are very thankful of them."
+ geq.27.a:0 "Great"
+ geq.28.t:0 "America doesn't invest in Geq!"
+ geq.28.d:0 "The Americans have decided to ignore Geq."
+ geq.28.a:0 "Awww heck"
+ geq.29.t:0 "Geq Requests Industrial Investments"
+ geq.29.d:0 "Geq is asking us to invest businesses, and indsutry in their nation. Doing this may incline Geq to give us bonuses in the future."
+ geq.29.a:0 "Yes"
+ geq.29.b:0 "No"
+ geq.30.t:0 "Britain invests in Geq!"
+ geq.30.d:0 "They have invested in our country, we are very thankful of them."
+ geq.30.a:0 "Great"
+ geq.31.t:0 "Britain doesn't invest in Geq!"
+ geq.31.d:0 "The British have decided to ignore Geq."
+ geq.31.a:0 "Awww heck"
+ GEQ_exploiting_dugeqmu_resources:0 "Exploiting Dugeqmu Resources"
+ GEQ_exploiting_dugeqmu_resources_desc:0 ""
+ GEQ_the_nations_future:0 "The Nation's Future"
+ GEQ_the_nations_future_desc:0 ""
+ GEQ_support_the_status_quo:0 "Support the Status Quo"
+ GEQ_support_the_status_quo_desc:0 ""
+ GEQ_liberalization_of_the_reigme:0 "Liberalization of the Regime"
+ GEQ_liberalization_of_the_reigme_desc:0 ""
+ GEQ_muror_inclusion:0 "Muror Inclusion"
+ GEQ_muror_inclusion_desc:0 ""
+ GEQ_muroran_monarchist_support:0 "Muror Monarchist Support"
+ GEQ_muroran_monarchist_support_desc:0 ""
+ GEQ_resurrect_the_empire_of_mu:0 "Resurrect the Empire of Mu"
+ GEQ_resurrect_the_empire_of_mu_desc:0 ""
+ GEQ_support_monarchist_groups_in_mu:0 "Support Monarchist Groups in Mu"
+ GEQ_support_monarchist_groups_in_mu_desc:0 ""
+ GEQ_recruitment_tactics:0 "Recruitment Tactics"
+ GEQ_recruitment_tactics_desc:0 ""
+ GEQ_pay_muroran_scientists:0 "Pay Muror Scientists"
+ GEQ_pay_muroran_scientists_desc:0 ""
+ GEQ_demand_vashparaqan_annexation:0 "Demand Vashparaqan Annexation"
+ GEQ_demand_vashparaqan_annexation_desc:0 ""
+ GEQ_develop_vashparaq:0 "Develop Vashparaq"
+ GEQ_develop_vashparaq_desc:0 ""
+ GEQ_invest_in_espionage2:0 "Invest in Espionage"
+ GEQ_invest_in_espionage2_desc:0 ""
+ GEQ_support_communism_in_commonwealth_states:0 "Support Communism in the Commonwealth States"
+ GEQ_support_communism_in_commonwealth_states_desc:0 ""
+ GEQ_spark_communist_uprisings_in_commonwealth_states:0 "Spark Communist Revolutions in the Commonwealth States"
+ GEQ_spark_communist_uprisings_in_commonwealth_states_desc:0 ""
+ GEQ_retake_the_commonwealth_states:0 "Retake the Commonwealth States"
+ GEQ_retake_the_commonwealth_states_desc:0 ""
+ GEQ_prepare_to_retake_the_south:0 "Prepare to Retake the South"
+ GEQ_prepare_to_retake_the_south_desc:0 ""
+ GEQ_retake_the_southern_muror_states:0 "Retake the Southern Muror States"
+ GEQ_retake_the_southern_muror_states_desc:0 ""
+ GEQ_integrate_all_resistance:0 "Integrate All Resistance"
+ GEQ_integrate_all_resistance_desc:0 ""
+ GEQ_demand_the_manka_peninsula:0 "Demand the Manka Peninsula"
+ GEQ_demand_the_manka_peninsula_desc:0 ""
+ GEQ_demand_british_and_american_colonies:0 "Demand British and American Ports"
+ GEQ_demand_british_and_american_colonies_desc:0 ""
+ GEQ_develop_our_empire:0 "Develop Our Empire"
+ GEQ_develop_our_empire_desc:0 ""
+ GEQ_secure_strategic_locations:0 "Secure Strategic Locations"
+ GEQ_secure_strategic_locations_desc:0 ""
+ GEQ_embrace_geqian_militarism2:0 "Embrace Dugeqmu Militarism"
+ GEQ_embrace_geqian_militarism2_desc:0 ""
+ GEQ_support_the_middle_class:0 "Support the Middle Class"
+ GEQ_support_the_middle_class_desc:0 ""
+ GEQ_invest_into_sciences:0 "Invest in to Sciences"
+ GEQ_invest_into_sciences_desc:0 ""
+ GEQ_ditch_research:0 "Ditch Science"
+ GEQ_ditch_research_desc:0 ""
+ GEQ_glory_to_geq:0 "Glory to Geq"
+ GEQ_glory_to_geq_desc:0 ""
+ GEQ_request_to_join_the_japanese_sphere:0 "Request to Join the Japanese Alliance"
+ GEQ_request_to_join_the_japanese_sphere_desc:0 ""
+ GEQ_naval_research_treaty:0 "Japanese Naval Research Treaty"
+ GEQ_naval_research_treaty_desc:0 ""
+ GEQ_develop_the_army:0 "Develop the Army"
+ GEQ_develop_the_army_desc:0 ""
+ GEQ_build_up_naval_capabilities:0 "Build Up Naval Capabilities"
+ GEQ_build_up_naval_capabilities_desc:0 ""
+ GEQ_retake_the_northern_kanagan_nations:0 "Retake the Northern Kanagan Nations"
+ GEQ_retake_the_northern_kanagan_nations_desc:0 ""
+ GEQ_retake_the_southern_kanagan_nations:0 "Retake the Southern Kanagan Nations"
+ GEQ_retake_the_southern_kanagan_nations_desc:0 ""
+ GEQ_support_equality:0 "Support Equality"
+ GEQ_support_equality_desc:0 ""
+ GEQ_destroy_the_establishment:0 "Destroy the Establishment"
+ GEQ_destroy_the_establishment_desc:0 ""
+ GEQ_stabilize_the_new_state:0 "Stabilize the New State"
+ GEQ_stabilize_the_new_state_desc:0 ""
+ GEQ_bring_capitalism_in:0 "Bring in Capitalism"
+ GEQ_bring_capitalism_in_desc:0 ""
+ GEQ_propose_the_muror_defence_alliance:0 "Propose the Muror Defence Alliance"
+ GEQ_propose_the_muror_defence_alliance_desc:0 ""
+ GEQ_finalize_the_alliance:0 "Finalize the Alliance"
+ GEQ_finalize_the_alliance_desc:0 ""
+ GEQ_defensive_preparations:0 "Defensive Preparations"
+ GEQ_defensive_preparations_desc:0 ""
+ GEQ_request_referendums:0 "Request Referendums from Commonwealth States"
+ GEQ_request_referendums_desc:0 ""
+ GEQ_invite_foreign_industry:0 "Invite Foreign Industries"
+ GEQ_invite_foreign_industry_desc:0 ""
+ GEQ_befriend_britain:0 "Befriend Britain"
+ GEQ_befriend_britain_desc:0 ""
+ GEQ_befriend_america:0 "Befriend America"
+ GEQ_befriend_america_desc:0 ""
+ GEQ_resource_exploitation_with_america:0 "Resource Exploitation with America"
+ GEQ_resource_exploitation_with_america_desc:0 ""
+ GEQ_resource_exploitation_with_britain:0 "Resource Exploitation with Britain"
+ GEQ_resource_exploitation_with_britain_desc:0 ""
+ GEQ_invest_in_industry:0 "Invest in Industry"
+ GEQ_invest_in_industry_desc:0 ""
+ GEQ_infrastructure_in_the_south:0 "Infrastructure Development in the South"
+ GEQ_infrastructure_in_the_south_desc:0 ""
+ GEQ_infrastructure_in_the_north:0 "Infrastructure Development in the North"
+ GEQ_infrastructure_in_the_north_desc:0 ""
+ GEQ_invest_in_refining:0 "Invest in Refining"
+ GEQ_invest_in_refining_desc:0 ""
+ GEQ_radar_breakthrough:0 "RADAR Research Breakthrough"
+ GEQ_radar_breakthrough_desc:0 ""
+ GEQ_extract_resources_in_jijeq:0 "Extract Resources in Jijeq"
+ GEQ_extract_resources_in_jijeq_desc:0 ""
+ GEQ_extract_resources_in_mauruuru:0 "Extract Resources in Mauruuru"
+ GEQ_extract_resources_in_mauruuru_desc:0 ""
+ GEQ_clear_uninhabitable_terrain:0 "Clear Uninhabitable Land"
+ GEQ_clear_uninhabitable_terrain_desc:0 ""
+ GEQ_construction_effort_1:0 "Construction Effort"
+ GEQ_construction_effort_1_desc:0 ""
+ GEQ_construction_effort_2:0 "Construction Effort II"
+ GEQ_construction_effort_2_desc:0 ""
+ GEQ_armament_effort_1:0 "Armament Effort"
+ GEQ_armament_effort_1_desc:0 ""
+ GEQ_armament_effort_2:0 "Armament Effort II"
+ GEQ_armament_effort_2_desc:0 ""
+ GEQ_doctrine_investment_1:0 "Doctrine Investments"
+ GEQ_doctrine_investment_1_desc:0 ""
+ GEQ_doctrine_investment_2:0 "Doctrine Investments II"
+ GEQ_doctrine_investment_2_desc:0 ""
+ GEQ_doctrine_investment_3:0 "Doctrine Investments III"
+ GEQ_doctrine_investment_3_desc:0 ""
+ GEQ_weapons_investments:0 "Weapon Investments"
+ GEQ_weapons_investments_desc:0 ""
+ GEQ_artillery_investments:0 "Artillery Investments"
+ GEQ_artillery_investments_desc:0 ""
+ GEQ_motorization_investments:0 "Motorization Investments"
+ GEQ_motorization_investments_desc:0 ""
+ GEQ_armour_investments:0 "Armor Investments"
+ GEQ_armour_investments_desc:0 ""
+ GEQ_develop_the_airforce:0 "Develop the Airforce"
+ GEQ_develop_the_airforce_desc:0 ""
+ GEQ_air_doctrine_investments:0 "Air Doctrine Investments"
+ GEQ_air_doctrine_investments_desc:0 ""
+ GEQ_fighter_investments:0 "Fighter Investments"
+ GEQ_fighter_investments_desc:0 ""
+ GEQ_CAS_investments:0 "Close Air Support Investments"
+ GEQ_CAS_investments_desc:0 ""
