--- a/localisation/strategic_region_names_l_english.yml
+++ b/localisation/strategic_region_names_l_english.yml
@@ -237,8 +237,8 @@
  STRATEGICREGION_237:0 "Kakaha Peninsula"
  STRATEGICREGION_238:0 "S. West Sea"
  STRATEGICREGION_239:0 "N. West Sea"
- STRATEGICREGION_240:0 "W. Northwest Passage"
- STRATEGICREGION_241:0 "E. Northwest Passage"
+ STRATEGICREGION_240:0 "Bonneville Sea"
+ STRATEGICREGION_241:0 "Northwest Passage"
  STRATEGICREGION_242:0 "Californian Sea"
  STRATEGICREGION_243:0 "California Island"
  STRATEGICREGION_244:0 "Cascadia"
