--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -355,7 +355,7 @@
  STATE_354:0 "Trabzon"
  STATE_355:0 "Samsun"
  STATE_356:0 "Kastamonu"
- STATE_357:0 "New England"
+ STATE_357:0 "Rhode Island"
  STATE_358:0 "New York"
  STATE_359:0 "New Jersey"
  STATE_360:0 "Pennsylvania"
@@ -955,6 +955,12 @@
  STATE_954:0 "Valhalla"
  STATE_955:0 "Athabaska"
  STATE_956:0 "Superior"
+ STATE_957:0 "Hermanas"
+ STATE_958:0 "New Hampshire"
+ STATE_959:0 "Connecticut"
+ STATE_960:0 "Massachusetts"
+ STATE_961:0 "Vermont"
+ STATE_962:0 "Maine"
  
  
  
