--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -1019,3 +1019,11 @@
  VICTORY_POINTS_6881:0 "Santa Barbara"
  VICTORY_POINTS_14238:0 "Salinas"
  VICTORY_POINTS_941:0 "Bakersfield"
+ VICTORY_POINTS_14159:0 "Zuhaitz"
+ VICTORY_POINTS_14175:0 "Anoixte"
+ VICTORY_POINTS_14178:0 "Yamylaik"
+ VICTORY_POINTS_14171:0 "Doxa"
+ VICTORY_POINTS_14184:0 "Osoa"
+ VICTORY_POINTS_14190:0 "Burmiunean"
+ VICTORY_POINTS_14148:0 "Þukefjäll"
+ VICTORY_POINTS_14155:0 "Guðir Hjam"
