--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -1027,3 +1027,4 @@
  VICTORY_POINTS_14190:0 "Burmiunean"
  VICTORY_POINTS_14148:0 "Þukefjäll"
  VICTORY_POINTS_14155:0 "Guðir Hjam"
+ VICTORY_POINTS_14147:0 "Altenín"
