--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -23,7 +23,7 @@
  CAL_democratic_ADJ:0 "Californian"
  CAL_neutrality_ADJ:0 "Californian"
  CAL_communism_ADJ:0 "Californian"
- CAS_fascism:0 "Cadcadia"
+ CAS_fascism:0 "Cascadia"
  CAS_fascism_DEF:0 "The Cascadian Empire"
  CAS_democratic:0 "Cascadia"
  CAS_democratic_DEF:0 "The Republic of Cascadia"
@@ -35,6 +35,18 @@
  CAS_democratic_ADJ:0 "Cascadian"
  CAS_neutrality_ADJ:0 "Cascadian"
  CAS_communism_ADJ:0 "Cascadian"
+ DES_fascism:0 "Deseret"
+ DES_fascism_DEF:0 "Deseret"
+ DES_democratic:0 "Deseret"
+ DES_democratic_DEF:0 "The Republic of Deseret"
+ DES_neutrality:0 "Deseret"
+ DES_neutrality_DEF:0 "Deseret"
+ DES_communism:0 "Western Socialist Republic"
+ DES_communism_DEF:0 "The Western Socialist Republic"
+ DES_fascism_ADJ:0 "Deseretan"
+ DES_democratic_ADJ:0 "Deseretan"
+ DES_neutrality_ADJ:0 "Deseretan"
+ DES_communism_ADJ:0 "Western Socialist"
  FRI_fascism:0 "Frisland"
  FRI_fascism_DEF:0 "The Frisland Riki"
  FRI_democratic:0 "Frisland"
