--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -1012,7 +1012,7 @@
  VICTORY_POINTS_7779:0 "Todd City"
  VICTORY_POINTS_1832:0 "Astoria"
  VICTORY_POINTS_14204:0 "McCloud"
- VICTORY_POINTS_12303:0 "Las Ondas"
+ VICTORY_POINTS_12303:0 "Las Vegas"
  VICTORY_POINTS_4607:0 "Oneida"
  VICTORY_POINTS_11658:0 "Manzanita"
  VICTORY_POINTS_610:0 "Eureka"
