--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -961,6 +961,9 @@
  STATE_960:0 "Massachusetts"
  STATE_961:0 "Vermont"
  STATE_962:0 "Maine"
+ STATE_963:0 "Vorea"
+ STATE_964:0 "Zukustane"
+ STATE_965:0 "Latasmun"
  
  
  
