--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -1028,3 +1028,6 @@
  VICTORY_POINTS_14148:0 "Þukefjäll"
  VICTORY_POINTS_14155:0 "Guðir Hjam"
  VICTORY_POINTS_14147:0 "Altenín"
+ VICTORY_POINTS_14151:0 "Tashrets"
+ VICTORY_POINTS_14156:0 "Chuzaseit"
+ VICTORY_POINTS_14157:0 "Taidorie"
